--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
 
     <color name="colorKapilF1">#ff6600</color>
     <color name="colorKapilF2">#ffcc99</color>
+
+    <color name="colorNIC">#e43134</color>
 </resources>
