--- a/app/src/main/res/drawable/bg_white.xml
+++ b/app/src/main/res/drawable/bg_white.xml
@@ -3,12 +3,8 @@
     android:shape="rectangle">
 
     <gradient
-        android:endColor="@color/colorNIC"
+        android:endColor="@color/colorWhite"
         android:gradientRadius="30dp"
         android:type="linear"
-        android:angle="90"
-        android:startColor="@color/colorSecondary" />
-
-    <corners android:radius="8dp"/>
-
+        android:startColor="@color/colorWhite" />
 </shape>
