--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -3,7 +3,8 @@
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/bg_login">
 
     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -16,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:background="@drawable/bg_dashboard_header"
+            android:background="@drawable/bg_facebook"
             android:padding="8dp">
 
             <ImageView
@@ -64,7 +65,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_dashboard_header"
+                    android:background="@drawable/bg_facebook"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="8dp">
@@ -72,7 +73,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/tutorial_120" />
+                        android:src="@drawable/listening" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -95,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_dashboard_header"
+                    android:background="@drawable/bg_facebook"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="8dp">
@@ -133,7 +134,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_dashboard_header"
+                    android:background="@drawable/bg_facebook"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="8dp">
@@ -164,7 +165,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_dashboard_header"
+                    android:background="@drawable/bg_facebook"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="8dp">
@@ -210,7 +211,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:background="@drawable/bg_dashboard_header"
+            android:background="@drawable/bg_facebook"
             android:padding="8dp">
 
             <ImageView
@@ -225,7 +226,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="26dp"
                 android:text="7 days tutorial for IELTS"
-                android:textColor="@color/colorWhite" />
+                android:textColor="@color/colorAccent" />
         </RelativeLayout>
 
     </RelativeLayout>
