UI of Reading task

--- a/app/src/main/res/drawable/bg_white.xml
+++ b/app/src/main/res/drawable/bg_white.xml
@@ -7,4 +7,6 @@
         android:gradientRadius="30dp"
         android:type="linear"
         android:startColor="@color/colorWhite" />
+
+    <corners android:radius="12dp"/>
 </shape>
