--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorKapilF2">#ffcc99</color>
 
     <color name="colorNIC">#e43134</color>
+    <color name="colorIELTS">#e31837</color>
 </resources>
