--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView"
+    android:id="@+id/dashboard_scrollview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:scrollbars="none"
     android:background="@drawable/bg_login">
 
     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
@@ -17,22 +18,42 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:background="@drawable/bg_facebook"
+            android:background="@drawable/bg_white"
             android:padding="8dp">
 
             <ImageView
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:src="@drawable/tutorial_120" />
+                android:id="@+id/dashboard_header_logo"
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:src="@drawable/ic_ielts" />
 
-            <TextView
+            <LinearLayout
+                android:layout_toEndOf="@+id/dashboard_header_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="26dp"
-                android:text="7 days tutorial for IELTS"
-                android:textColor="@color/colorWhite" />
+                android:layout_centerVertical="true"
+                android:layout_marginStart="12dp"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/dashboard_header_top_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seven Days"
+                    android:textStyle="normal"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="24sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tutorial"
+                    android:textStyle="bold"
+                    android:gravity="center_horizontal"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="38sp" />
+            </LinearLayout>
+
+
         </RelativeLayout>
 
         <TextView
@@ -42,7 +63,7 @@
             android:layout_below="@+id/dashboard_tutorial_rl"
             android:layout_marginBottom="16dp"
             android:text="Practice"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorWhite"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -65,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_facebook"
+                    android:background="@drawable/bg_white"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="8dp">
@@ -73,20 +94,23 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/listening" />
+                        android:src="@drawable/ic_listening" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Listening"
                         android:textStyle="bold"
-                        android:textColor="@color/colorWhite"/>
+                        android:layout_marginTop="12dp"
+                        android:textColor="@color/colorIELTS"
+                        android:textSize="24sp"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Section"
-                        android:textColor="@color/colorWhite"/>
+                        android:textColor="@color/colorWhite"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
@@ -96,7 +120,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_facebook"
+                    android:background="@drawable/bg_white"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="8dp">
@@ -104,20 +128,23 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/tutorial_120" />
+                        android:src="@drawable/ic_speaking" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Speaking"
                         android:textStyle="bold"
-                        android:textColor="@color/colorWhite"/>
+                        android:layout_marginTop="12dp"
+                        android:textColor="@color/colorIELTS"
+                        android:textSize="24sp"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Section"
-                        android:textColor="@color/colorWhite"/>
+                        android:textColor="@color/colorWhite"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
@@ -129,12 +156,12 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:id="@+id/dashboard_grammer"
+                    android:id="@+id/dashboard_reading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_facebook"
+                    android:background="@drawable/bg_white"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="8dp">
@@ -142,30 +169,33 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/tutorial_120" />
+                        android:src="@drawable/ic_reading" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Grammer"
+                        android:text="Reading"
                         android:textStyle="bold"
-                        android:textColor="@color/colorWhite"/>
+                        android:layout_marginTop="12dp"
+                        android:textColor="@color/colorIELTS"
+                        android:textSize="24sp"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Section"
-                        android:textColor="@color/colorWhite"/>
+                        android:textColor="@color/colorWhite"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/dashboard_vocabulary"
+                    android:id="@+id/dashboard_writing"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_facebook"
+                    android:background="@drawable/bg_white"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="8dp">
@@ -173,20 +203,23 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/tutorial_120" />
+                        android:src="@drawable/ic_writing" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Vocabulary"
+                        android:text="Writing"
                         android:textStyle="bold"
-                        android:textColor="@color/colorWhite"/>
+                        android:layout_marginTop="12dp"
+                        android:textColor="@color/colorIELTS"
+                        android:textSize="24sp"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Section"
-                        android:textColor="@color/colorWhite"/>
+                        android:textColor="@color/colorWhite"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
@@ -201,12 +234,12 @@
             android:layout_below="@+id/dashboard_practice_section"
             android:layout_marginBottom="16dp"
             android:text="Tips"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorWhite"
             android:textSize="25sp"
             android:textStyle="bold" />
 
         <RelativeLayout
-            android:id="@+id/dashboard_tips"
+            android:id="@+id/dashboard_resources"
             android:layout_below="@+id/dashboard_tips_section_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -215,18 +248,48 @@
             android:padding="8dp">
 
             <ImageView
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:src="@drawable/tutorial_120" />
+                android:id="@+id/dashboard_resources_logo"
+                android:layout_width="76dp"
+                android:layout_height="76dp"
+                android:src="@drawable/ic_resources" />
 
             <TextView
+                android:layout_toEndOf="@+id/dashboard_resources_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="26dp"
-                android:text="7 days tutorial for IELTS"
-                android:textColor="@color/colorAccent" />
+                android:text="IELTS Resources"
+                android:textStyle="bold"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="12dp"
+                android:textColor="@color/colorIELTS"
+                android:textSize="24sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/dashboard_counseling"
+            android:layout_below="@+id/dashboard_resources"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/bg_facebook"
+            android:padding="8dp">
+
+            <ImageView
+                android:id="@+id/dashboard_counseling_logo"
+                android:layout_width="76dp"
+                android:layout_height="76dp"
+                android:src="@drawable/ic_counseling" />
+
+            <TextView
+                android:layout_toEndOf="@+id/dashboard_counseling_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Student Counseling"
+                android:textStyle="bold"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="12dp"
+                android:textColor="@color/colorIELTS"
+                android:textSize="24sp" />
         </RelativeLayout>
 
     </RelativeLayout>
