Reading section using firebase

--- a/app/src/main/res/layout/activity_reading_task.xml
+++ b/app/src/main/res/layout/activity_reading_task.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/readingtask_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Reading IELTS"
+                android:text="@string/reading_task1_header"
                 android:textStyle="bold"
                 android:textSize="24sp"
                 android:layout_marginStart="12dp"
@@ -37,7 +37,7 @@
             android:id="@+id/readingtask_title_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="You should spend about 20 minutes on Questions 1-12, which are based on Reading Passage 1 below."
+            android:text="@string/reading_task1_pretitle"
             android:textStyle="normal"
             android:textSize="18sp"
             android:paddingTop="12dp"
@@ -47,7 +47,7 @@
             android:id="@+id/readingtask_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Harsh marks &#39;put pupils off languages&#39;"
+            android:text="@string/reading_task1_title"
             android:textStyle="bold"
             android:textSize="20sp"
             android:paddingTop="12dp"
